# xareon

./: .gitignore  AGENTS.md  idea.md  ideas1.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: achievement_commands.rs  automatic_tracking_commands.rs  game_commands.rs  genre_commands.rs  journal_commands.rs  mod.rs  play_session_commands.rs  profile_sync_commands.rs  settings_commands.rs  statistics_commands.rs
src-tauri/src/config/: automatic_tracking.rs  device_settings.rs  global_shortcut.rs  mod.rs  session_indicator.rs
src-tauri/src/db/: connection.rs  manager.rs  migrations.rs  mod.rs
src-tauri/src/domain/: achievement.rs  automatic_tracking.rs  game.rs  genre.rs  journal.rs  mod.rs  play_session.rs  settings.rs  statistics.rs
src-tauri/src/events/: mod.rs
src-tauri/src/migrations/: 0001_init.sql  0002_genres_journal.sql  0003_settings.sql  0004_achievements.sql  0005_play_sessions.sql  0006_endless_status.sql  0007_automatic_tracking.sql  0008_daily_play_time.sql
src-tauri/src/platform/: windows.rs
src-tauri/src/repositories/: achievement_repository.rs  game_process_repository.rs  game_repository.rs  genre_repository.rs  journal_repository.rs  mod.rs  play_session_repository.rs  settings_repository.rs  statistics_repository.rs
src-tauri/src/services/: achievement_service.rs  automatic_tracking_service.rs  game_service.rs  genre_service.rs  journal_service.rs  mod.rs  play_session_service.rs  settings_service.rs  statistics_service.rs
src-tauri/src/storage/: legacy_app_migration.rs  mod.rs  profile_sync.rs
src-tauri/src/validation/: mod.rs
src/api/: achievements.ts  automatic-tracking.ts  games.ts  journal.ts  play-sessions.ts  settings.ts  statistics.ts
src/types/: achievement.ts  automatic-tracking.ts  game.ts  genre.ts  journal.ts  play-session.ts  settings.ts  statistics.ts
src/ui/: confirm.ts  dom.ts  format.ts
src/views/: game-detail.ts  game-form.ts  games-view.ts  settings-view.ts  statistics-view.ts
