[package]
name = "xareon"
version = "0.1.0"
description = "A personal desktop gaming journal"
edition = "2021"
rust-version = "1.77"

[lib]
# The library holds all application logic; `main.rs` is a thin entry point.
name = "xareon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
