[package]
name = "xareon"
version = "0.1.0"
description = "A personal desktop gaming journal"
edition = "2021"
rust-version = "1.77"

[lib]
# The library holds all application logic; `main.rs` is a thin entry point.
name = "xareon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["backup", "bundled"] }
thiserror = "1"
sha2 = "0.10"
rfd = "0.15"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
